--- a/admin/index.html
+++ b/admin/index.html
@@ -8,22 +8,13 @@
   <body>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script>
-      if (window.netlifyIdentity) {
-        window.netlifyIdentity.on("init", function (user) {
-          if (!user) {
-            window.netlifyIdentity.on("login", function () {
-              document.location.href = "/admin/";
-            });
-          }
-        });
-      }
-    </script>
-    <script>
       window.process = window.process || { env: { NODE_ENV: "production" } };
       window.CMS_MANUAL_INIT = true;
     </script>
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
     <script>
+      initializeIdentityHandlers();
+
       (function initCms() {
         if (window.CMS && typeof window.CMS.init === "function") {
           window.CMS.init();
@@ -43,6 +34,85 @@
         console.error(message);
         document.body.insertAdjacentHTML("beforeend", `<p>${message}</p>`);
       })();
+
+      function initializeIdentityHandlers() {
+        if (!window.netlifyIdentity) {
+          ensureIdentityLoginPrompt(false);
+          return;
+        }
+
+        window.netlifyIdentity.on("init", (user) => {
+          ensureIdentityLoginPrompt(Boolean(user));
+        });
+
+        window.netlifyIdentity.on("login", () => {
+          ensureIdentityLoginPrompt(true);
+          document.location.href = "/admin/";
+        });
+
+        window.netlifyIdentity.on("logout", () => {
+          ensureIdentityLoginPrompt(false);
+        });
+
+        try {
+          window.netlifyIdentity.init();
+          const currentUser =
+            typeof window.netlifyIdentity.currentUser === "function"
+              ? window.netlifyIdentity.currentUser()
+              : null;
+          if (currentUser) {
+            ensureIdentityLoginPrompt(true);
+          }
+        } catch (error) {
+          console.error("Failed to initialise Netlify Identity:", error);
+          ensureIdentityLoginPrompt(false);
+        }
+      }
+
+      function ensureIdentityLoginPrompt(isAuthenticated) {
+        const existing = document.getElementById("cms-identity-login");
+
+        if (isAuthenticated) {
+          if (existing) {
+            existing.remove();
+          }
+          return;
+        }
+
+        const cmsRoot = document.getElementById("nc-root");
+        if (cmsRoot) {
+          if (existing) {
+            existing.remove();
+          }
+          return;
+        }
+
+        if (existing) {
+          return;
+        }
+
+        const container = document.createElement("div");
+        container.id = "cms-identity-login";
+        container.className = "cms-identity-login";
+        container.innerHTML = `
+          <div class="cms-identity-login__card">
+            <h1>Log in to TextMyLink</h1>
+            <p>You need to be signed in to manage blog posts.</p>
+            <button type="button">Log in with Netlify</button>
+          </div>
+        `;
+
+        const button = container.querySelector("button");
+        if (button) {
+          button.addEventListener("click", () => {
+            if (window.netlifyIdentity && typeof window.netlifyIdentity.open === "function") {
+              window.netlifyIdentity.open();
+            }
+          });
+        }
+
+        document.body.appendChild(container);
+      }
 
       function setupIdentityUI() {
         if (!window.netlifyIdentity) {
@@ -629,8 +699,75 @@
         return "blog";
       }
     </script>
-  </body>
-</html>
+    <style>
+      #cms-identity-login {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        margin: 0;
+        padding: 2.5rem 1.5rem;
+        background: linear-gradient(135deg, #f1f5f9 0%, #e0f2fe 100%);
+      }
+
+      .cms-identity-login__card {
+        max-width: 420px;
+        width: min(100%, 420px);
+        background: #ffffff;
+        border-radius: 18px;
+        box-shadow: 0 24px 64px rgba(15, 23, 42, 0.16);
+        padding: 2.25rem 2rem;
+        text-align: center;
+        display: grid;
+        gap: 1rem;
+      }
+
+      .cms-identity-login__card h1 {
+        margin: 0;
+        font-size: clamp(1.5rem, 2vw + 1rem, 2rem);
+        font-weight: 700;
+        color: #0f172a;
+      }
+
+      .cms-identity-login__card p {
+        margin: 0;
+        color: #334155;
+        font-size: 1rem;
+        line-height: 1.6;
+      }
+
+      .cms-identity-login__card button {
+        margin-top: 0.5rem;
+        border: none;
+        border-radius: 999px;
+        background: #2563eb;
+        color: #ffffff;
+        font-size: 1rem;
+        font-weight: 600;
+        padding: 0.85rem 1.75rem;
+        cursor: pointer;
+        transition: transform 0.15s ease, box-shadow 0.15s ease, background 0.15s ease;
+        box-shadow: 0 12px 24px rgba(37, 99, 235, 0.22);
+      }
+
+      .cms-identity-login__card button:hover,
+      .cms-identity-login__card button:focus-visible {
+        background: #1d4ed8;
+        transform: translateY(-1px);
+        box-shadow: 0 16px 32px rgba(37, 99, 235, 0.25);
+        outline: none;
+      }
+
+      .cms-identity-login__card button:focus-visible {
+        outline: 3px solid rgba(37, 99, 235, 0.45);
+        outline-offset: 3px;
+      }
+
+      .cms-identity-login__card button:active {
+        transform: translateY(0);
+        box-shadow: 0 8px 18px rgba(37, 99, 235, 0.25);
+      }
+    </style>
     <style>
       #cms-body-formatting-tips {
         margin: 1rem 0;
@@ -888,3 +1025,5 @@
         }
       }
     </style>
+  </body>
+</html>
